--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ animation: animatedBackground 10s linear infinite;
         count ++;
         document.getElementById('visitor_count').innerHTML = count;
     }
-    window.onload = IncremeCounter;
+    window.onload = IncremeCounter();
 
 </script>
 </body>
