--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ animation: animatedBackground 10s linear infinite;
 <script>
 document.addEventListener('DOMContentLoaded', function() {
     // Pobranie elementu, który będzie wyświetlał liczbę odwiedzin
-    var counterElement = document.getElementById('counter');
+    var counterElement = document.getElementById('visitor_count');
 
     // Wywołanie pliku PHP, aby uzyskać aktualną liczbę odwiedzin
     fetch('counter.php')
